# media-company-lakehouse

./: README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: README.md
configs/dags/: content_metrics_pipeline.yaml
configs/environments/: dev.yaml  prod.yaml
configs/spark_jobs/: content_metrics_job.yaml
dags/: README.md  __init__.py
dags/common/: __init__.py  config_driven_dag.py
dags/teams/: __init__.py
dags/teams/editorial/: __init__.py  content_metrics_pipeline_dag.py
docs/: architecture.md  onboarding.md  standards.md
requirements/: airflow.txt  dev.txt  spark.txt
scripts/: check_dags.py
spark_jobs/: README.md  __init__.py
spark_jobs/entrypoints/: __init__.py  run_job.py
spark_jobs/jobs/: __init__.py  content_metrics_job.py
src/lakehouse_framework/: __init__.py
src/lakehouse_framework/airflow/: __init__.py  dag_factory.py  spark_submit.py
src/lakehouse_framework/config/: __init__.py  loader.py  models.py  registry.py
src/lakehouse_framework/spark/: __init__.py  base_job.py  job_runner.py  session.py
src/lakehouse_framework/utils/: __init__.py  logging.py  module_loading.py
tests/: test_config_loader.py
